--- a/cases/yaml/rtidb_demo.yaml
+++ b/cases/yaml/rtidb_demo.yaml
@@ -61,3 +61,19 @@ cases:
     sql: select {0}.c1,{0}.c2 from {0};
     expect:
       success: false
+  - id: 3
+    desc: 普通select with placeholders
+    parameters:
+      columns: ["1 string", "2 int", "3 double"]
+      rows:
+        - ["aa", 1, 3.1]
+    inputs:
+      - columns: ["c1 string","c2 int","c3 bigint","c4 timestamp"]
+        indexs: ["index1:c1:c4"]
+        rows:
+          - ["aa",null,3,1590738989000L]
+    sql: select {0}.c1,{0}.c2 from {0} where c1=? and c2>?;
+    expect:
+      columns: ["c1 string","c2 int"]
+      rows:
+        - ["aa",null]
