--- a/demo/predict-taxi-trip-duration-nb/Dockerfile.aarch64
+++ b/demo/predict-taxi-trip-duration-nb/Dockerfile.aarch64
@@ -4,6 +4,9 @@ RUN yum install -y python38 python38-pip python38-numpy libgomp java-1.8.0-openj
     yum clean all && \
     pip3 install lightgbm tornado requests pandas openmldb
 
+COPY demo /work/taxi-trip/
+COPY develop_ml_application_tour.ipynb /work/
+
 ENV LANG=en_US.UTF-8
 
 COPY setup_openmldb.sh /
