--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -74,7 +74,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: demo/predict-taxi-trip-duration-nb
-          file: demo/predict-taxi-trip-duration-nb/Dockerfile.aarch64
           push: ${{ env.PUSH }}
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ env.TAGS }}
