--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,6 +29,11 @@ jobs:
         with:
           install: true
 
+      - name: Docker Compose Test
+        working-directory: demo/predict-taxi-trip-duration-nb
+        run: |
+          docker-compose -f docker-compose.test.yml -- up
+
       - name: Decide the Tag
         if: ${{ github.event_name == 'push' }}
         run: |
