--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,11 +49,16 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "main" ] && VERSION=latest
 
-          echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
+
+          GHCR_TAG=$IMAGE_ID:$VERSION
+          DOCKERHUB_TAG=4pdosc/$IMAGE_NAME:$VERSION
+          echo "GitHub Docker Registry Tag: $GHCR_TAG"
+          echo "DockerHub Tag: "
           echo "COMMIT=${{ github.sha }}"
 
-          echo "TAGS=$IMAGE_ID:$VERSION" >> $GITHUB_ENV
+          echo "GHCR_TAG=$GHCR_TAG" >> $GITHUB_ENV
+          echo "DOCKERHUB_TAG=$DOCKERHUB_TAG" >> $GITHUB_ENV
 
       - name: Decide Push
         run: |
@@ -62,6 +67,13 @@ jobs:
           else
             echo "PUSH=false" >> $GITHUB_ENV
           fi
+
+      - name: Login to Docker Hub
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
         if: ${{ github.event_name == 'push' }}
@@ -79,4 +91,6 @@ jobs:
           context: demo/predict-taxi-trip-duration-nb
           push: ${{ env.PUSH }}
           platforms: linux/amd64,linux/arm64
-          tags: ${{ env.TAGS }}
+          tags: |
+            ${{ env.GHCR_TAG }}
+            ${{ env.DOCKERHUB_TAG }}
