build: improve dockerfile and cmake (#179)
- docker: support linux/amd64 & linux/arm64
- cmake: rm file_based_test_driver & *_proto deps
- thirdparty:
   - upgrade gtest to 1.11
   - support arm64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,7 +161,7 @@ link_directories(${CMAKE_PREFIX_PATH}/lib64)
 
 find_package(absl REQUIRED)
 
-find_package(GTest 1.10 EXACT REQUIRED)
+find_package(GTest REQUIRED)
 
 set(Protobuf_USE_STATIC_LIBS ON)
 find_package(Protobuf 3.6 EXACT REQUIRED)
@@ -186,26 +186,11 @@ list(
         absl::status)
 
 list(APPEND ICU_LIBS icui18n icuio icuuc icudata)
-list(APPEND file_based_test_driver_LIBS
-        alternations
-        test_case_options
-        test_case_outputs
-        test_case_mode
-        logging
-        path
-        status
-        unified_diff_oss
-        ret_check
-        )
 set(ZETASQL_LIBS
         zetasql
-        ${file_based_test_driver_LIBS}
         ${ABSL_LIBS}
         re2
         ${ICU_LIBS}
-        date_proto
-        timeofday_proto
-        latlng_proto
     )
 if (PYSDK_ENABLE)
     set(Python_ADDITIONAL_VERSIONS "3.8;3.7;3.6;3.5;2.7" CACHE STRING "Python to use for binding")
