--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,6 +13,7 @@ on:
     paths:
       - docker/Dockerfile
       - docker/**/*.sh
+  workflow_dispatch:
 
 env:
   IMAGE_NAME: hybridsql
@@ -26,32 +27,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
-      - name: Build image
-        working-directory: docker
-        run: |
-          if [[ ${{ github.ref }} == "refs/heads/main" ]]; then
-            git diff --name-only HEAD~1 HEAD -- | grep --regexp "^docker/\(.+/\)*\(Dockerfile\|.*\.sh\)\$" || exit 0
-          fi
-          docker build --no-cache . --file Dockerfile --tag $IMAGE_NAME
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-      - name: Login to GitHub Container Registry
-        if: ${{ github.event_name == 'push' }}
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Push image
+      - name: Decide the Tag
         if: ${{ github.event_name == 'push' }}
         run: |
-          if [[ ${{ github.ref }} == "refs/heads/main" ]]; then
-            git diff --name-only HEAD~1 HEAD -- | grep --regexp "^docker/\(.+/\)*\(Dockerfile\|.*\.sh\)\$" || exit 0
-          fi
-
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
 
           # Change all uppercase to lowercase
@@ -66,9 +51,47 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "main" ] && VERSION=latest
 
-          echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
+
+          GHCR_TAG=$IMAGE_ID:$VERSION
+          DOCKERHUB_TAG=${{ secrets.DOCKERHUB_REPO }}/$IMAGE_NAME:$VERSION
+          echo "GitHub Docker Registry Tag: $GHCR_TAG"
+          echo "DockerHub Tag: $DOCKERHUB_TAG"
           echo "COMMIT=${{ github.sha }}"
 
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+          echo "GHCR_TAG=$GHCR_TAG" >> $GITHUB_ENV
+          echo "DOCKERHUB_TAG=$DOCKERHUB_TAG" >> $GITHUB_ENV
+
+      - name: Decide Push
+        run: |
+          if [[ ${{ github.event_name }} = 'push' ]]; then
+            echo "PUSH=true" >> $GITHUB_ENV
+          else
+            echo "PUSH=false" >> $GITHUB_ENV
+          fi
+
+      - name: Login to GitHub Container Registry
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to Docker Hub
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build And Push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: docker
+          push: ${{ env.PUSH }}
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ env.GHCR_TAG }}
+            ${{ env.DOCKERHUB_TAG }}
