add java python sdk test & release

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -517,7 +517,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.5</version>
+                    <version>3.0.1</version>
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
@@ -525,6 +525,15 @@
                             <goals>
                                 <goal>sign</goal>
                             </goals>
+                            <configuration>
+                                <!-- <useAgent>true</useAgent> -->
+                                <!-- uncomment this if want to specify gpg sign key -->
+                                <!-- <keyname>${gpg.keyname}</keyname> -->
+
+                                <passphraseServerId>gpg.passphrase</passphraseServerId>
+
+                                <!-- <passphrase>${gpg.passphrase}</passphrase> -->
+                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
