--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,8 +27,8 @@ jobs:
           mkdir -p build
           source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) && cd ../
           rm -rf /depends/thirdparty/*
-      
-      - name: Pack OpenMLDB
+
+      - name: pack OpenMLDB
         if: ${{ github.event_name == 'push' }}
         run: |
           VERSION="snapshot"
@@ -38,7 +38,7 @@ jobs:
           fi
           bash steps/package_openmldb.sh $VERSION ${{ env.OS }}
 
-      - name: Upload Artifacts
+      - name: upload artifacts
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
@@ -48,10 +48,7 @@ jobs:
       - name: run cpp
         run: |
           bash steps/ut.sh
-#      - name: run sql_sdk_test
-#        if: always()
-#        run: |
-#          bash steps/sql_sdk_c_ut.sh 0 sql_sdk_test
+
       - name: upload unit test results
         if: always()
         uses: actions/upload-artifact@v2
@@ -59,6 +56,7 @@ jobs:
           name: linux-ut-result-cpp-${{ github.sha }}
           path: |
             reports/*.xml
+
       - name: cleanup
         if: always()
         run: |
@@ -83,7 +81,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }} # the same name?
+          name: linux-ut-result-cpp-sdk-${{ github.sha }}
           path: |
             reports/*.xml
       - name: cleanup
@@ -119,9 +117,71 @@ jobs:
           source /etc/profile.d/enable-rh.sh
           git clean -dfx
 
+  java-sdk:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/hybridsql:0.3.0
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: build jsdk and package
+        run: |
+          bash steps/init_env.sh
+          mkdir -p build
+          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=ON -DTESTING_ENABLE=OFF .. && make -j$(nproc) sql_javasdk_package openmldb && cd ../
+
+      - name: run jdbc smoke test
+        run: |
+          sh steps/ut_zookeeper.sh start
+          cd onebox && sh start_onebox.sh && cd -
+          cd java
+          mvn test -Dscalatest.skip=true
+          cd -
+          cd onebox && sh stop_all.sh && cd -
+          sh steps/ut_zookeeper.sh stop
+
+      - name: upload java ut results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: linux-ut-result-java-${{ github.sha }}
+          path: |
+            java/openmldb-jdbc/target/**/TEST-*.xml
+
+  python-sdk:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/hybridsql:0.3.0
+    steps:
+      - uses: actions/checkout@v1
+      - name: build pysdk and sqlalchemy
+        run: |
+          bash steps/init_env.sh
+          mkdir -p build
+          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=ON -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=OFF .. && make -j$(nproc) sqlalchemy_openmldb openmldb && cd ../
+      - name: test sqlalchemy
+        run: |
+          python3 -m easy_install nose sqlalchemy pip
+          bash steps/fesql_test_python.sh
+      - name: upload python ut results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: linux-ut-result-python-${{ github.sha }}
+          path: |
+            python/sqlalchemy-test/nosetests.xml
+      - name: upload pysdk and whl
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v2
+        with:
+          path: |
+            build/python/dist/openmldb*.whl
+          name: python-artifacts
+
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: ["build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test"]
+    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+
     # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
     if: >
       always() && github.event_name == 'push' || (
@@ -141,7 +201,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # if test failed, shouldn't release
-    needs: ["build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test"]
+    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -149,7 +209,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: release-artifacts
-
       - name: Release
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         uses: softprops/action-gh-release@v1
@@ -158,3 +217,69 @@ jobs:
             openmldb-*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # only tag deploy, only run on 4paradigm/OpenMLDB's context?
+  java-sdk-deploy:
+    runs-on: ubuntu-latest
+    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    container:
+      image: ghcr.io/4paradigm/hybridsql:0.3.0
+    if: >
+      success() && startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_TOKEN
+          gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
+
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v3
+        with:
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+
+      - name: upload to maven
+        run: |
+          bash steps/init_env.sh
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          VERSION=$(echo $VERSION | sed -e 's/^v//')
+          sh steps/package_openmldb_javasdk.sh $VERSION
+        env:
+          MAVEN_OPTS: -Duser.home=/github/home
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+
+  python-sdk-deploy:
+    runs-on: ubuntu-latest
+    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    if: >
+      success() && startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine
+      - name: Download Release Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: python-artifacts
+      # download only one file, openmldb-*.whl
+      - name: upload to pypi
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          ls
+          twine upload openmldb-*.whl
