ci: avoid name conflicts in ut report

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -312,15 +312,15 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           files: linux-ut-result-*/**/*.xml
-          check_name: Linux Test Report
-          comment_title: Linux Test Report
+          check_name: HybridSE Linux Test Report
+          comment_title: HybridSE Linux Test Report
 
       - name: Publish Mac UT Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           files: macos-ut-result-*/**/*.xml
-          check_name: Mac Test Report
-          comment_title: Mac Test Report
+          check_name: HybridSE Mac Test Report
+          comment_title: HybridSE Mac Test Report
 
   coverage:
     runs-on: ubuntu-latest
