ci: update build image & turn on examples (#191)
* ci: update build image & turn on examples

* ci: update base build docker

* build: upgrade hybridse version to 0.2.2

* build: fix version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ project(hybridse)
 
 set(HYBRIDSE_VERSION_MAJOR 0)
 set(HYBRIDSE_VERSION_MINOR 2)
-set(HYBRIDSE_VERSION_BUG 0)
+set(HYBRIDSE_VERSION_BUG 1)
 
 option(TESTING_ENABLE "Enable Test" ON)
 option(CORE_TESTING_ENABLE "Enable Core Test" ON)
@@ -49,7 +49,7 @@ option(BENCHMARK_ENABLE "Enable Benchmark" OFF)
 option(COVERAGE_ENABLE "Enable Coverage" OFF)
 option(PYSDK_ENABLE "Enable pysdk" ON)
 option(JAVASDK_ENABLE "Enable javasdk" ON)
-option(EXAMPLES_ENABLE "Enable examples" OFF)
+option(EXAMPLES_ENABLE "Enable examples" ON)
 option(LLVM_EXT_ENABLE "Enable llvm ext sources" OFF)
 
 if (NOT DEFINED CMAKE_PREFIX_PATH)
@@ -226,9 +226,6 @@ if (COVERAGE_ENABLE)
     endif ()
 endif ()
 
-if (CMAKE_INSTALL_PREFIX STREQUAL "")
-    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/release)
-endif ()
 install(TARGETS hybridse_core hybridse_sdk hybridse_flags
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
