--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -12,6 +12,9 @@ defaults:
   run:
     working-directory: hybridse
 
+env:
+  HYBRIDSE_PATH: hybridse
+
 jobs:
   linux-build:
     runs-on: ubuntu-latest
@@ -55,7 +58,7 @@ jobs:
         with:
           name: linux-ut-result-cpp-${{ github.sha }}
           path: |
-            build/*.xml
+            ${{ env.HYBRIDSE_PATH }}/build/*.xml
 
       - name: Java SDK Test
         run: |
@@ -68,13 +71,13 @@ jobs:
         with:
           name: linux-ut-result-java-${{ github.sha }}
           path: |
-            java/hybridse-sdk/target/**/TEST-*.xml
+            ${{ env.HYBRIDSE_PATH }}/java/hybridse-sdk/target/**/TEST-*.xml
 
       - name: Upload jsdk
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: build/src/sdk/libhybridse*.so
+          path: ${{ env.HYBRIDSE_PATH }}/build/src/sdk/libhybridse*.so
           name: lib-artifacts
 
       - name: Prepare Maven Release Deploy
@@ -86,7 +89,7 @@ jobs:
 
       - name: Publish Java Library
         if: ${{ github.event_name == 'push' }}
-        working-directory: hybridse/java
+        working-directory: ${{ env.HYBRIDSE_PATH }}/java
         run: |
           mvn --batch-mode deploy
         env:
@@ -110,7 +113,7 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: ${{ env.HYBRIDSE_PATH }}/hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           name: release-artifacts
 
   macos-build:
@@ -157,7 +160,7 @@ jobs:
         with:
           name: macos-ut-result-cpp-${{ github.sha }}
           path: |
-            build/*.xml
+            ${{ env.HYBRIDSE_PATH }}/build/*.xml
 
       - name: Java SDK Test
         run: |
@@ -170,13 +173,13 @@ jobs:
         with:
           name: macos-ut-result-java-${{ github.sha }}
           path: |
-            java/hybridse-sdk/target/**/TEST-*.xml
+            ${{ env.HYBRIDSE_PATH }}/java/hybridse-sdk/target/**/TEST-*.xml
 
       - name: Upload jsdk
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: build/src/sdk/libhybridse*.dylib
+          path: ${{ env.HYBRIDSE_PATH }}/build/src/sdk/libhybridse*.dylib
           name: lib-artifacts
 
       - name: Prepare Maven Release Deploy
@@ -188,7 +191,7 @@ jobs:
 
       - name: Publish Java Library
         if: ${{ github.event_name == 'push' }}
-        working-directory: hybridse/java
+        working-directory: ${{ env.HYBRIDSE_PATH }}/java
         run: |
           mvn --batch-mode -P macos clean install
           mvn --batch-mode -P macos -pl hybridse-native deploy
@@ -213,7 +216,7 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: ${{ env.HYBRIDSE_PATH }}/hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           name: release-artifacts
 
   java-allinone-deploy:
@@ -265,7 +268,7 @@ jobs:
           ./java/prepare_release.sh $VERSION
 
       - name: Publish Java Library
-        working-directory: hybridse/java
+        working-directory: ${{ env.HYBRIDSE_PATH }}/java
         run: |
           mvn --batch-mode -P allinone clean install
           mvn --batch-mode -P allinone -pl hybridse-native deploy
@@ -339,7 +342,7 @@ jobs:
       - name: Upload Coverage Report
         uses: codecov/codecov-action@v1
         with:
-          files: build/coverage.info,./java/hybridse-sdk/target/site/jacoco/jacoco.xml
+          files: ${{ env.HYBRIDSE_PATH }}/build/coverage.info,${{ env.HYBRIDSE_PATH }}/java/hybridse-sdk/target/site/jacoco/jacoco.xml
           name: coverage
           fail_ci_if_error: true
           verbose: true
