--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -8,6 +8,10 @@ on:
       - v*
   pull_request:
 
+defaults:
+  run:
+    working-directory: hybridse
+
 env:
   HYBRIDSE_PATH: hybridse
 
@@ -15,7 +19,7 @@ jobs:
   linux-build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     env:
       OS: linux
       ARCH: x86_64
@@ -218,7 +222,7 @@ jobs:
   java-allinone-deploy:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     needs: ["macos-build"]
     if: >
       success() && github.event_name == 'push'
@@ -286,19 +290,12 @@ jobs:
         with:
           name: release-artifacts
 
-      - name: Download Lib Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: lib-artifacts
-
       - name: Release
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         uses: softprops/action-gh-release@v1
         with:
           files: |
             hybridse-*.tar.gz
-            *.so
-            *.dylib
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -331,14 +328,12 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/4paradigm/hybridsql:0.3.0
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Fetch Submodules
-        run: |
-          git submodule update --init --recursive
+        with:
+          submodules: true
 
       - name: Build and Coverage
         run: |
