--- a/.github/workflows/hybridsql-docker.yml
+++ b/.github/workflows/hybridsql-docker.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: HybridSQL Docker
 
 on:
   push:
@@ -12,8 +12,8 @@ on:
   pull_request:
     paths:
       - .github/workflows/hybridsql-docker.yml
-      - docker/Dockerfile
-      - docker/**/*.sh
+      - hybridse/docker/Dockerfile
+      - hybridse/docker/**/*.sh
   workflow_dispatch:
 
 env:
@@ -90,7 +90,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: docker
+          context: hybridse/docker
           push: ${{ env.PUSH }}
           platforms: linux/amd64,linux/arm64
           tags: |
