ci: fix hybridseci on openmldb (#217)
* ci: add hybridse workflows

* ci: fix HybridSE workflow on OpenMLDB

* ci: update workflows

* cherry pick hybridse v0.2.1

- https://github.com/4paradigm/HybridSE/pull/195
- https://github.com/4paradigm/HybridSE/pull/197
- update a few scripts

* chore: reorg dotfiles

* feat: add cmake-modules

* docs: rm hybridse badges

* build: turn on example build by default

* ci(cpplint): disable 'build/header_guard' check

--- a/.github/workflows/openmldb-docker.yml
+++ b/.github/workflows/openmldb-docker.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: OpenMLDB Docker
 
 on:
   push:
@@ -8,7 +8,9 @@ on:
       - v*
   pull_request:
     paths:
+      - .github/workflows/openmldb-docker.yml
       - demo/predict-taxi-trip-duration-nb/**/*
+  workflow_dispatch:
 
 env:
   IMAGE_NAME: openmldb
