--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -8,6 +8,13 @@ on:
       - v*
   pull_request:
 
+defaults:
+  run:
+    working-directory: hybridse
+
+env:
+  HYBRIDSE_PATH: hybridse
+
 jobs:
   linux-build:
     runs-on: ubuntu-latest
@@ -51,7 +58,7 @@ jobs:
         with:
           name: linux-ut-result-cpp-${{ github.sha }}
           path: |
-            build/*.xml
+            ${{ env.HYBRIDSE_PATH }}/build/*.xml
 
       - name: Java SDK Test
         run: |
@@ -64,13 +71,13 @@ jobs:
         with:
           name: linux-ut-result-java-${{ github.sha }}
           path: |
-            java/hybridse-sdk/target/**/TEST-*.xml
+            ${{ env.HYBRIDSE_PATH }}/java/hybridse-sdk/target/**/TEST-*.xml
 
       - name: Upload jsdk
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: build/src/sdk/libhybridse*.so
+          path: ${{ env.HYBRIDSE_PATH }}/build/src/sdk/libhybridse*.so
           name: lib-artifacts
 
       - name: Prepare Maven Release Deploy
@@ -82,7 +89,7 @@ jobs:
 
       - name: Publish Java Library
         if: ${{ github.event_name == 'push' }}
-        working-directory: java
+        working-directory: ${{ env.HYBRIDSE_PATH }}/java
         run: |
           mvn --batch-mode deploy
         env:
@@ -106,7 +113,7 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: ${{ env.HYBRIDSE_PATH }}/hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           name: release-artifacts
 
   macos-build:
@@ -153,7 +160,7 @@ jobs:
         with:
           name: macos-ut-result-cpp-${{ github.sha }}
           path: |
-            build/*.xml
+            ${{ env.HYBRIDSE_PATH }}/build/*.xml
 
       - name: Java SDK Test
         run: |
@@ -166,13 +173,13 @@ jobs:
         with:
           name: macos-ut-result-java-${{ github.sha }}
           path: |
-            java/hybridse-sdk/target/**/TEST-*.xml
+            ${{ env.HYBRIDSE_PATH }}/java/hybridse-sdk/target/**/TEST-*.xml
 
       - name: Upload jsdk
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: build/src/sdk/libhybridse*.dylib
+          path: ${{ env.HYBRIDSE_PATH }}/build/src/sdk/libhybridse*.dylib
           name: lib-artifacts
 
       - name: Prepare Maven Release Deploy
@@ -184,7 +191,7 @@ jobs:
 
       - name: Publish Java Library
         if: ${{ github.event_name == 'push' }}
-        working-directory: java
+        working-directory: ${{ env.HYBRIDSE_PATH }}/java
         run: |
           mvn --batch-mode -P macos clean install
           mvn --batch-mode -P macos -pl hybridse-native deploy
@@ -209,7 +216,7 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
         with:
-          path: hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          path: ${{ env.HYBRIDSE_PATH }}/hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
           name: release-artifacts
 
   java-allinone-deploy:
@@ -261,7 +268,7 @@ jobs:
           ./java/prepare_release.sh $VERSION
 
       - name: Publish Java Library
-        working-directory: java
+        working-directory: ${{ env.HYBRIDSE_PATH }}/java
         run: |
           mvn --batch-mode -P allinone clean install
           mvn --batch-mode -P allinone -pl hybridse-native deploy
@@ -283,19 +290,12 @@ jobs:
         with:
           name: release-artifacts
 
-      - name: Download Lib Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: lib-artifacts
-
       - name: Release
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         uses: softprops/action-gh-release@v1
         with:
           files: |
             hybridse-*.tar.gz
-            *.so
-            *.dylib
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -315,15 +315,15 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           files: linux-ut-result-*/**/*.xml
-          check_name: Linux Test Report
-          comment_title: Linux Test Report
+          check_name: HybridSE Linux Test Report
+          comment_title: HybridSE Linux Test Report
 
       - name: Publish Mac UT Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           files: macos-ut-result-*/**/*.xml
-          check_name: Mac Test Report
-          comment_title: Mac Test Report
+          check_name: HybridSE Mac Test Report
+          comment_title: HybridSE Mac Test Report
 
   coverage:
     runs-on: ubuntu-latest
@@ -332,10 +332,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Fetch Submodules
-        run: |
-          git submodule update --init --recursive
+        with:
+          submodules: true
 
       - name: Build and Coverage
         run: |
@@ -344,7 +342,7 @@ jobs:
       - name: Upload Coverage Report
         uses: codecov/codecov-action@v1
         with:
-          files: build/coverage.info,./java/hybridse-sdk/target/site/jacoco/jacoco.xml
+          files: ${{ env.HYBRIDSE_PATH }}/build/coverage.info,${{ env.HYBRIDSE_PATH }}/java/hybridse-sdk/target/site/jacoco/jacoco.xml
           name: coverage
           fail_ci_if_error: true
           verbose: true
