--- a/hybridse/CMakeLists.txt
+++ b/hybridse/CMakeLists.txt
@@ -226,6 +226,9 @@ if (COVERAGE_ENABLE)
     endif ()
 endif ()
 
+if (CMAKE_INSTALL_PREFIX STREQUAL "")
+    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/release)
+endif ()
 install(TARGETS hybridse_core hybridse_sdk hybridse_flags
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
