build(pom.xml): update repo link

--- a/hybridse/java/pom.xml
+++ b/hybridse/java/pom.xml
@@ -35,10 +35,10 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git@github.com:4paradigm/HybridSE.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:4paradigm/HybridSE.git</developerConnection>
+        <connection>scm:git@github.com:4paradigm/OpenMLDB.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:4paradigm/OpenMLDB.git</developerConnection>
         <tag>HEAD</tag>
-        <url>https://github.com/4paradigm/HybridSE</url>
+        <url>https://github.com/4paradigm/OpenMLDB</url>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
