ci(hybridse-ci): limit run condition
on:
- pull request that changes hybridse files
- manual trigger

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -7,6 +7,11 @@ on:
     tags:
       - v*
   pull_request:
+    paths:
+      - .github/workflows/hybridse-ci.yml
+      - cases/**/*
+      - hybridse/**/*
+  workflow_dispatch:
 
 defaults:
   run:
