--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -259,6 +259,8 @@
 			<artifactId>junit</artifactId>
 			<version>4.13.1</version>
 		</dependency>
+
+		<!-- Spark -->
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.binary.version}</artifactId>
@@ -271,6 +273,12 @@
 			<version>${spark.version}</version>
 			<scope>${spark.dependencyScope}</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-hive_${scala.binary.version}</artifactId>
+			<version>${spark.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
@@ -337,6 +345,12 @@
 			<groupId>org.apache.iceberg</groupId>
 			<artifactId>iceberg-spark3-runtime</artifactId>
 			<version>0.11.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.iceberg</groupId>
+			<artifactId>iceberg-hive</artifactId>
+			<version>0.9.1</version>
 		</dependency>
 
 	</dependencies>
